--- a/css/style.css
+++ b/css/style.css
@@ -1,150 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Lobster&display=swap");
 :root {
-  --color-primary: #ffc078;
-  --color-primary-light: rgb(48, 46, 46);
-  --color-primary-dark: #000;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-html {
-  font-size: 62.5%;
-
-  @media only screen and (max-width: 68.75em) {
-    font-size: 50%;
-  }
-}
-
-body {
-  box-sizing: border-box;
-
-  font-family: "Lobster", sans-serif;
-  font-weight: 400;
-  line-height: 1.6;
-
-  color: #fff;
-  background-image: linear-gradient(
-      to right top,
-      rgba(0, 0, 1, 0.6),
-      rgba(0, 0, 0, 0.6)
-    ),
-    url("../assets/img/background.jpg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  display: flex;
-  flex-direction: column;
-}
-
-.section-menu {
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  background-color: #bb9e67;
-  width: 80vw;
-  height: 200vh;
-
-  overflow-x: hidden;
-  overflow-y: scroll;
-  transition: all 300ms cubic-bezier(0.895, 0.03, 0.685, 0.22); /* easeInQuart */
-}
-
-.main-content__logo img {
-  width: 20vw;
-  transition: all 1s ease-out;
-}
-.main-content__logo {
-  padding-top: 2rem;
-  height: 10vh;
-}
-
-.menu {
-  color: snow;
-  text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.6);
-  font-size: 4rem;
-  list-style: none;
-  margin: 3rem;
-  transition: all 1.3s ease-in-out;
-  height: 200vh;
-}
-
-.menu__title {
-  width: 60%;
-  border-bottom: solid 1px #fff;
-  margin-bottom: 6rem;
-}
-
-.menu__section-title {
-  margin-bottom: 3rem;
-  font-size: 3rem;
-  line-height: 1.25;
-}
-
-.menu--in-navigation {
-  display: none;
-}
-
-.section-target {
-  cursor: pointer;
-}
-
-.section-target:focus {
-  filter: brightness(50%);
-  transform: translateY(-1px);
-}
-
-.section__subtitle {
-  color: #caa773;
-  font-size: 2rem;
-  padding-left: 87%;
-}
-
-.section-menu__icon {
-  fill: #fff;
-  opacity: 0;
-  width: 5rem;
-  height: 5rem;
-  display: block;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-  position: fixed;
-  top: 3vh;
-  right: 6vw;
-}
-
-.section {
-  transform: translateX(-82vw);
-  max-width: 85vw;
-  display: none;
-}
-
-.section__title {
-  margin-left: 10vw;
-  margin-right: 25vw;
-  margin-top: 10vh;
-  font-size: 4rem;
-  border-bottom: solid 1px #fff;
-  margin-bottom: 3rem;
-}
-
-.section__list {
-  margin: 0 10vw;
-
-  list-style: none;
-}
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Lobster&display=swap");
-:root {
-  --color-primary: #ffc078;
+  --color-primary: #ebd3a6;
   --color-primary-light: rgb(48, 46, 46);
   --color-primary-dark: #000;
 }
@@ -190,12 +46,12 @@ body {
   flex-direction: column;
   object-fit: cover;
 }
-
 .section-menu {
   position: fixed;
   top: 0px;
   right: 0px;
   background-color: #bb9e67;
+  /* background-image: linear-gradient(to left bottom, #ad7a3c, #d7ac73); */
   width: 80vw;
   height: 120vh;
 
@@ -215,7 +71,7 @@ body {
 
 .menu {
   color: snow;
-  /* text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.6); */
+  text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.6);
   font-size: 4rem;
   list-style: none;
   margin: 3rem;
