--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,14 @@ body {
   transition: all 1s ease-out;
 }
 .main-content__logo {
-  padding-top: 2rem;
+  margin-top: 2rem;
+  /* margin-left: 2vw; */
+
   height: 10vh;
 }
-
 .menu {
   color: snow;
-  text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.6);
+  /* text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.6); */
   font-size: 4rem;
   list-style: none;
   margin: 3rem;
